[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/WenCangShuFang-2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scences/Sc_test_menu.gd" type="Script" id=2]
[ext_resource path="res://scences/Node2D_draw_line.gd" type="Script" id=3]
[ext_resource path="res://Image/human_01.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="GraphEdit"]
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="human" type="TextureRect" parent="GraphEdit/HBoxContainer"]
margin_left = 463.0
margin_right = 688.0
margin_bottom = 1080.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="GraphEdit/HBoxContainer"]
margin_left = 696.0
margin_right = 1196.0
margin_bottom = 1080.0
rect_min_size = Vector2( 500, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="GraphEdit/HBoxContainer"]
margin_left = 1204.0
margin_right = 1456.0
margin_bottom = 1080.0
alignment = 1

[node name="Label" type="Label" parent="GraphEdit/HBoxContainer/VBoxContainer"]
margin_top = 431.0
margin_right = 252.0
margin_bottom = 469.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "play ground menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="graphedit" type="Button" parent="GraphEdit/HBoxContainer/VBoxContainer"]
margin_top = 477.0
margin_right = 252.0
margin_bottom = 514.0
text = "GraphEdit_test"

[node name="UI_test" type="Button" parent="GraphEdit/HBoxContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 252.0
margin_bottom = 559.0
text = "UI_test"

[node name="Time_test" type="Button" parent="GraphEdit/HBoxContainer/VBoxContainer"]
margin_top = 567.0
margin_right = 252.0
margin_bottom = 604.0
text = "Time_test"

[node name="Button" type="Button" parent="GraphEdit/HBoxContainer/VBoxContainer"]
margin_top = 612.0
margin_right = 252.0
margin_bottom = 649.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GraphEdit/HBoxContainer/VBoxContainer/graphedit" to="." method="_on_graphedit_pressed"]
[connection signal="pressed" from="GraphEdit/HBoxContainer/VBoxContainer/UI_test" to="." method="_on_UI_test_pressed"]
[connection signal="pressed" from="GraphEdit/HBoxContainer/VBoxContainer/Time_test" to="." method="_on_Time_test_pressed"]
[connection signal="pressed" from="GraphEdit/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
